fix non visible panes from taking space

--- a/atcon/css/base.css
+++ b/atcon/css/base.css
@@ -94,3 +94,11 @@ div.tabulator-paginator {
 select.tabulator-page-size {
     padding-left: 8px;
 }
+
+.tab-pane {
+    display: none;
+}
+
+.tab-pane.active {
+    display: block;
+}
